@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-07T08:21:07Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
+  "timestamp" : "2022-08-08T01:47:46Z",
+  "count" : 3,
+  "count_minmax" : [ 2, 3 ],
+  "count_decinc" : [ -0, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
