@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-07T16:23:25Z",
+  "timestamp" : "2022-08-08T01:47:46Z",
   "count_outdated" : 2319,
   "uniques_outdated" : 528,
-  "count" : 2350,
+  "count" : 2351,
   "uniques" : 545,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 3,
+      "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
