@@ -1,5 +1,5 @@
 {
-  "count": 31,
+  "count": 32,
   "uniques": 4,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-08-07T00:00:00Z",
-      "count": 2,
+      "count": 3,
       "uniques": 2
     }
   ]
